workloads/react/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: react-service
  namespace: llm-ns

spec:
  selector:
    app: react-ui

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

  type: ClusterIP
