workloads/react/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: react-ingress
  namespace: llm-ns

spec:
  ingressClassName: nginx

  rules:
    - host: 20-72-172-104.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: react-service
                port:
                  number: 80
